install(FILES
  eventstream_arb.block.yml
  eventstream_emit_event.block.yml
  eventstream_handler_file.block.yml 
  eventstream_handler_passthrough.block.yml
  eventstream_handler_pdu.block.yml
  eventstream_handler_print.block.yml
  eventstream_patterned_interleaver.block.yml
  eventstream_sink.block.yml
  eventstream_source.block.yml
  eventstream_trigger_edge_f.block.yml
  eventstream_trigger_sample_timer.block.yml
  eventstream_trigger_timer.block.yml
  eventstream_variable_evt.block.yml
  eventstream_variable_init.block.yml
  DESTINATION share/gnuradio/grc/blocks
)


